add install inotify-tools for phoenix image.

--- a/phoenix/Dockerfile
+++ b/phoenix/Dockerfile
@@ -1,9 +1,9 @@
 FROM elixir:1.5.2
 # RUN wget -qO- https://deb.nodesource.com/setup_4.x | bash -
 # RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs
+RUN apt-get update -qq && apt-get install -y inotify-tools
 
 RUN mix local.hex --force
-# RUN mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phoenix_new.ez
 RUN mix archive.install --force https://github.com/phoenixframework/archives/raw/master/phx_new.ez
 RUN mix local.rebar --force
 
